--- a/横版动作游戏/Resources/laowang.plist
+++ b/横版动作游戏/Resources/laowang.plist
@@ -17,8 +17,8 @@
 	<key>gethitRect</key>
 	<string>{{-40,-40},{80,80}}</string>
 	<key>lockLimit</key>
-	<integer>400</integer>
-	<key>ATkLimit</key>
+	<integer>200</integer>
+	<key>ATKLimit</key>
 	<integer>100</integer>
 	<key>armtureName</key>
 	<string>laowang</string>
